# OpenGL_vertex_translations

./: CMakeLists.txt
dependencies/include/glad/: glad.h
src/: config.h  glad.c  linAlgebra.cpp  linAlgebra.h  main.cpp  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.glsl  vertex.glsl
